apps/base/linkwarden/meilisearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: linkwarden
  labels:
    app: meilisearch
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: meilisearch
